--- a/Homework/Quick Sort.ipynb
+++ b/Homework/Quick Sort.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Homework1: Quick Sort"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
@@ -10,17 +17,17 @@
      "output_type": "stream",
      "text": [
       "before\n",
-      "[49, 18, 93, 62, 69, 82, 69, 86, 8, 54]\n",
+      "[54, 20, 67, 1, 25, 12, 40, 20, 32, 21]\n",
       "after\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[8, 18, 49, 54, 62, 69, 69, 82, 86, 93]"
+       "[1, 12, 20, 20, 21, 25, 32, 40, 54, 67]"
       ]
      },
-     "execution_count": 272,
+     "execution_count": 275,
      "metadata": {},
      "output_type": "execute_result"
     }
