--- a/HW2/heap sort.ipynb
+++ b/HW2/heap sort.ipynb
@@ -41,14 +41,19 @@
    "source": [
     "# 參考資料\n",
     "\n",
-    "其他參考網站:\n",
+    "參考網站:\n",
+    ">* https://github.com/pecu/DSA/blob/master/06_HeapSort/heapSort.py\n",
     ">* https://openhome.cc/Gossip/AlgorithmGossip/HeapSort.htm#Python\n",
     ">* http://www.pianshen.com/article/7788199455/\n",
-    "\n",
-    "程式碼參考網站:\n",
-    ">* https://github.com/pecu/DSA/blob/master/06_HeapSort/heapSort.py\n",
     ">* https://www.iteye.com/blog/2057-1897176\n",
-    ">* https://blog.csdn.net/weixin_37621790/article/details/86695537"
+    ">* https://blog.csdn.net/weixin_37621790/article/details/86695537\n",
+    ">* https://blog.csdn.net/huang_yong_peng/article/details/81879990\n",
+    ">* https://www.cnblogs.com/yinzhengjie/p/10970889.html\n",
+    ">* https://www.runoob.com/python/att-dictionary-copy.html\n",
+    ">* https://towardsdatascience.com/data-structure-heap-23d4c78a6962\n",
+    ">* https://github.com/python/cpython/blob/master/Lib/heapq.py\n",
+    ">* https://docs.python.org/3/library/heapq.html\n",
+    ">* https://www.geeksforgeeks.org/iterative-heap-sort/"
    ]
   },
   {
@@ -214,14 +219,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "測試數值= [21, 87, -23, 67, -4, 30, -74, 31, -21, 77]\n"
+      "測試數值= [-49, 78, 0, 94, -98, -98, -73, 42, -78, 43]\n"
      ]
     }
    ],
@@ -303,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "第一次尝试不成功。。。"
+    "第一次嘗試不成功。。。"
    ]
   },
   {
@@ -335,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +371,7 @@
     "\n",
     "def heap_sort(data):\n",
     "    n = len(data)\n",
-    "    for i in range(n // 2 - 1, -1, -1):\n",
+    "    for i in range(n , -1, -1):\n",
     "        heapify(data, i, n)\n",
     "        #建立Max-Heap\n",
     "    for i in range(n - 1, 0, -1):\n",
@@ -379,12 +384,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "finally!!!root的位置很重要 要定義好"
+    "經過嘗試后。。。finally!!!root的位置很重要 要定義好"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +398,7 @@
        "[-74, -23, -21, -4, 21, 30, 31, 67, 77, 87]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,152 +411,263 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "接下來開始自己的想法"
+    "# 接下來開始作業"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 104,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def main():\n",
-    "    heap_sort(arr)\n",
-    "    print(arr)"
+    "# 直接賦值和 copy 的區別\n",
+    "dict1 =  {'user':'runoob','num':[1,2,3]}\n",
+    " \n",
+    "dict2 = dict1          # 淺拷貝: 引用對象\n",
+    "dict3 = dict1.copy()   # 淺拷貝：深拷貝父對象（一級目錄），子對象（二級目錄）不拷貝，還是引用\n",
+    " \n",
+    "# 修改 data 數據\n",
+    "dict1['user']='root'\n",
+    "dict1['num'].remove(1)\n",
+    " \n",
+    "# 輸出結果\n",
+    "print(dict1)\n",
+    "print(dict2)\n",
+    "print(dict3)\n",
+    "\n",
+    "{'num': [2, 3], 'user': 'root'}\n",
+    "{'num': [2, 3], 'user': 'root'}\n",
+    "{'num': [2, 3], 'user': 'runoob'}"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 107,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def left(i):\n",
-    "    return 2 * (i + 1) - 1\n",
-    "\n",
-    "def right(i):\n",
-    "    return 2 * (i + 1)\n",
-    "\n",
-    "def parent():\n",
-    "    return (i + 1) * 2 - 1"
+    "# flow"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5, 2, 3, 4, 1]\n"
+      "a, [-94, -67, -65, 2, -57, 68, 23, 83, 22, -16]\n",
+      "b [-67, -57, -65, 2, -16, 68, 23, 83, 22] [-94]\n",
+      "c [-67, -57, -65, 2, -16, 68, 23, 83, 22] [-94]\n",
+      "b [-65, -57, 22, 2, -16, 68, 23, 83] [-94, -67]\n",
+      "c [-65, -57, 22, 2, -16, 68, 23, 83] [-94, -67]\n",
+      "b [-57, -16, 22, 2, 83, 68, 23] [-94, -67, -65]\n",
+      "c [-57, -16, 22, 2, 83, 68, 23] [-94, -67, -65]\n",
+      "b [-16, 2, 22, 23, 83, 68] [-94, -67, -65, -57]\n",
+      "c [-16, 2, 22, 23, 83, 68] [-94, -67, -65, -57]\n",
+      "b [2, 23, 22, 68, 83] [-94, -67, -65, -57, -16]\n",
+      "c [2, 23, 22, 68, 83] [-94, -67, -65, -57, -16]\n",
+      "b [22, 23, 83, 68] [-94, -67, -65, -57, -16, 2]\n",
+      "c [22, 23, 83, 68] [-94, -67, -65, -57, -16, 2]\n",
+      "b [23, 68, 83] [-94, -67, -65, -57, -16, 2, 22]\n",
+      "c [23, 68, 83] [-94, -67, -65, -57, -16, 2, 22]\n",
+      "b [68, 83] [-94, -67, -65, -57, -16, 2, 22, 23]\n",
+      "c [68, 83] [-94, -67, -65, -57, -16, 2, 22, 23]\n",
+      "b [83] [-94, -67, -65, -57, -16, 2, 22, 23, 68]\n",
+      "c [83] [-94, -67, -65, -57, -16, 2, 22, 23, 68]\n",
+      "b [] [-94, -67, -65, -57, -16, 2, 22, 23, 68, 83]\n",
+      "c [] [-94, -67, -65, -57, -16, 2, 22, 23, 68, 83]\n",
+      "a, [-94, -67, -65, 2, -57, 68, 23, 83, 22, -16]\n",
+      "b [-67, -57, -65, 2, -16, 68, 23, 83, 22] [-94]\n",
+      "c [-67, -57, -65, 2, -16, 68, 23, 83, 22] [-94]\n",
+      "b [-65, -57, 22, 2, -16, 68, 23, 83] [-94, -67]\n",
+      "c [-65, -57, 22, 2, -16, 68, 23, 83] [-94, -67]\n",
+      "b [-57, -16, 22, 2, 83, 68, 23] [-94, -67, -65]\n",
+      "c [-57, -16, 22, 2, 83, 68, 23] [-94, -67, -65]\n",
+      "b [-16, 2, 22, 23, 83, 68] [-94, -67, -65, -57]\n",
+      "c [-16, 2, 22, 23, 83, 68] [-94, -67, -65, -57]\n",
+      "b [2, 23, 22, 68, 83] [-94, -67, -65, -57, -16]\n",
+      "c [2, 23, 22, 68, 83] [-94, -67, -65, -57, -16]\n",
+      "b [22, 23, 83, 68] [-94, -67, -65, -57, -16, 2]\n",
+      "c [22, 23, 83, 68] [-94, -67, -65, -57, -16, 2]\n",
+      "b [23, 68, 83] [-94, -67, -65, -57, -16, 2, 22]\n",
+      "c [23, 68, 83] [-94, -67, -65, -57, -16, 2, 22]\n",
+      "b [68, 83] [-94, -67, -65, -57, -16, 2, 22, 23]\n",
+      "c [68, 83] [-94, -67, -65, -57, -16, 2, 22, 23]\n",
+      "b [83] [-94, -67, -65, -57, -16, 2, 22, 23, 68]\n",
+      "c [83] [-94, -67, -65, -57, -16, 2, 22, 23, 68]\n",
+      "b [] [-94, -67, -65, -57, -16, 2, 22, 23, 68, 83]\n",
+      "c [] [-94, -67, -65, -57, -16, 2, 22, 23, 68, 83]\n",
+      "fianl result= [-94, -67, -65, -57, -16, 2, 22, 23, 68, 83]\n"
      ]
     }
    ],
    "source": [
-    "def max_heapify(A, i):\n",
-    "    \"\"\"\n",
-    "    保持堆的属性\n",
-    "    A: list of ints\n",
-    "    i: index of node to examine\n",
+    "import random\n",
+    "import pandas \n",
+    "import numpy as np\n",
     "\n",
-    "    \"\"\"\n",
-    "    l = left(i)\n",
-    "    r = right(i)\n",
+    "x = np.random.randint(-100,100,10)\n",
+    "arr = x.tolist()\n",
     "\n",
-    "    if l < len(A) and A[l] > A[i]:\n",
-    "        largest = l\n",
-    "    else:\n",
-    "        largest = i\n",
+    "def MinH(data,i):\n",
+    "    left = 2 * i + 1\n",
+    "    right = 2 * i + 2\n",
+    "    n = len(data)-1\n",
+    "    s = i \n",
+    "    if left <= n and data[left] < data[i]:\n",
+    "        s = left\n",
+    "    if right <= n and data[right] < data[s] :\n",
+    "        s = right\n",
+    "    if s != i:\n",
+    "        data[i],data[s] = data[s],data[i]\n",
+    "        MinH(data,s)\n",
     "\n",
-    "    if r < len(A) and A[r] > A[largest]:\n",
-    "        largest = r\n",
+    "def HeapS(data):\n",
+    "    data = data.copy()\n",
+    "    for i in reversed(range(len(data)//2)):\n",
+    "        MinH(data,i)\n",
+    "    print('a,',data)\n",
+    "    sort_d = []\n",
+    "    for _ in range(len(data)):\n",
+    "        data[0],data[-1] = data[-1],data[0]\n",
+    "        sort_d.append(data.pop())\n",
+    "        MinH(data,0)\n",
+    "        print('b',data,sort_d)\n",
+    "        print('c',data,sort_d)\n",
+    "    return sort_d\n",
+    "        \n",
+    "def main(data):\n",
+    "    HeapS(data)\n",
+    "    print('fianl result=',HeapS(data))\n",
     "\n",
-    "    if largest != i:\n",
-    "        A[i],A[largest] = A[largest],A[i]\n",
-    "        max_heapify(A,largest)\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    A=[1,2,3,4,5]\n",
-    "    max_heapify(A,0)\n",
-    "    print(A)\n",
-    "\n",
-    "输出结果为：\n",
-    "[3, 2, 1, 4, 5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def build_max_head(A):\n",
-    "    i = len(A) / 2 - 1\n",
-    "    while i >= 0:\n",
-    "        max_heapify(A, i)\n",
-    "        i -= 1\n",
-    "\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    A=[1,2,3,4,5]\n",
-    "    build_max_head(A)\n",
-    "    print(A)\n",
-    "\n",
-    "输出结果为：\n",
-    "[5, 4, 3, 1, 2]\n",
-    "这个结果大家可以自行推导"
+    "main(arr)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 134,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def head_sort(A):\n",
-    "    result = []\n",
-    "    build_max_head(A)\n",
-    "    while len(A) > 1:\n",
-    "        result.append(A[0])\n",
-    "        A[0],A[len(A)-1] = A[len(A)-1],A[0]\n",
-    "        A = A[:-1]\n",
-    "        max_heapify(A,0)\n",
-    "    result.extend(A)\n",
-    "    return result\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    A=[1,2,3,4,5,7,8,10,400]\n",
-    "    result = head_sort(A)\n",
-    "    print(result)\n",
-    "\n",
-    "输出结果为：\n",
-    "[400, 10, 8, 7, 5, 4, 3, 2, 1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 135,
-   "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not float",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-135-7c744dc28eb9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mhead_sort\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-134-6df3d8ebdb3f>\u001b[0m in \u001b[0;36mhead_sort\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mhead_sort\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mbuild_max_head\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[1;32mwhile\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mresult\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-133-ee01f762537c>\u001b[0m in \u001b[0;36mbuild_max_head\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mindex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m/\u001b[0m \u001b[1;36m2\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mwhile\u001b[0m \u001b[0mindex\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m         \u001b[0mmax_heapify\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m         \u001b[0mindex\u001b[0m \u001b[1;33m-=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-129-fd61bb65b433>\u001b[0m in \u001b[0;36mmax_heapify\u001b[1;34m(n, index)\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mright\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m     \u001b[1;32mif\u001b[0m \u001b[0ml\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mn\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0ml\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m>\u001b[0m \u001b[0mn\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m         \u001b[0mlargest\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0ml\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not float"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-45, -40, -36, -13, -1, 2, 7, 38, 51, 76]\n"
      ]
     }
    ],
    "source": [
-    "head_sort(arr)"
+    "import random\n",
+    "import pandas \n",
+    "import numpy as np\n",
+    "\n",
+    "x = np.random.randint(-100,100,10)\n",
+    "    #隨機生成數字\n",
+    "arr = x.tolist()\n",
+    "\n",
+    "def MinH(data,i):\n",
+    "    n = len(data)-1 #長度\n",
+    "    left = 2 * i + 1\n",
+    "    #proof\n",
+    "    # if root=0,left1=2*0+2=2,\n",
+    "    # if root=1,left2=2*1+2=4,\n",
+    "    right = 2 * i + 2\n",
+    "    #proof\n",
+    "    # if root=0,left1=2*0+1=1\n",
+    "    # if root=1,left2=2*1+1=3\n",
+    "    s = i  #建立root\n",
+    "    if left <= n and data[left] < data[i]:\n",
+    "        s = left # 判斷 left\n",
+    "    if right <= n and  data[right] < data[s]:\n",
+    "        s = right# 判斷 right\n",
+    "    if s != i: #改變root\n",
+    "        data[i],data[s] = data[s],data[i]\n",
+    "        MinH(data,s)\n",
+    "\n",
+    "def HeapS(data):\n",
+    "    data = data.copy()\n",
+    "    for i in reversed(range(len(data)//2)):\n",
+    "        MinH(data,i)\n",
+    "        #從最後一層的第二個節點疊代到根節點\n",
+    "    sort_d = []#建立newlist\n",
+    "    for _ in range(len(data)):\n",
+    "        data[0],data[-1] = data[-1],data[0]\n",
+    "        sort_d.append(data.pop()) \n",
+    "        MinH(data,0)\n",
+    "    #swap list[0] remove append to new list\n",
+    "    return sort_d\n",
+    "        \n",
+    "def main(data):\n",
+    "    HeapS(data)\n",
+    "    print(HeapS(data))\n",
+    "    # result\n",
+    "\n",
+    "main(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    #import random\n",
+    "    #import pandas \n",
+    "    #import numpy as np\n",
+    "\n",
+    "    #x = np.random.randint(-100,100,10)\n",
+    "    #arr = x.tolist()\n",
+    "\n",
+    "    def MinH(self,data,i):\n",
+    "        n = len(data)-1\n",
+    "        left = 2 * i + 1\n",
+    "        right = 2 * i + 2\n",
+    "        s = i \n",
+    "        if left <= n and data[left] < data[i]:\n",
+    "            s = left\n",
+    "        if right <= n and data[right] < data[s] :\n",
+    "            s = right\n",
+    "        if s != i:\n",
+    "            data[i],data[s] = data[s],data[i]\n",
+    "            self.MinH(data,s)\n",
+    "            \n",
+    "    def heap_sort(self,data):\n",
+    "        data = data.copy()\n",
+    "        for i in reversed(range(len(data)//2)):\n",
+    "            self.MinH(data,i)\n",
+    "        sort_d = []\n",
+    "        for _ in range(len(data)):\n",
+    "            data[0],data[-1] = data[-1],data[0]\n",
+    "            sort_d.append(data.pop())\n",
+    "            self.MinH(data,0)\n",
+    "        return sort_d\n",
+    "    \n",
+    "    #def main(data):\n",
+    "    #HeapS(data)\n",
+    "    #print(HeapS(data))\n",
+    "    # result\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-4, 0, 2, 19, 54, 72, 87]"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output=Solution().heap_sort([72,2,-4,54,87,0,19])\n",
+    "output"
    ]
   }
  ],
